# cognitive

./: .coveragerc  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  openstack-common.conf  setup.cfg  test-requirements.txt  tox.ini
cognitive/: __init__.py
cognitive/tests/: test_cognitive.py
doc/source/: conf.py  installation.rst  usage.rst
